# personal-site-2026

./: .gitignore  Cargo.toml  README.md  dials.json  index.html  phrases.json  sections.json  ui.js  vercel-build.sh  vercel.json
.github/workflows/: deploy.yml
parked/drag-nav/: lib.rs.snapshot
parked/drag-nav/interaction_intent/: scroll_intent.rs
parked/line-tracing/: README.md  stroke_path.rs
src/: interaction_intent.rs  lib.rs
src/interaction_intent/: drag_intent.rs  scroll_intent.rs
