[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "HtmlCanvasElement", "Performance",
  # 2D canvas — used to rasterize the text and sample opaque pixels into
  # particle attraction points.
  "CanvasRenderingContext2d", "ImageData", "TextMetrics",
  # mouse tracking
  "MouseEvent", "EventTarget", "Event", "Location",
  "TouchEvent", "TouchList", "Touch",
  # wheel/trackpad scroll intent (desktop) + touch-device detection
  "WheelEvent", "AddEventListenerOptions", "MediaQueryList",
  "console",
] }
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
